test/fixtures/success/package-path/options.js
'use strict';

module.exports = {
  plugins: [
    ['../../../../lib/index.js', {
      root: 'some-path',
    }],
  ],
};
